# CymatiX

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompileShaders.cmake
include/app/: App.h  Config.h  SharedTypes.h
include/audio/: AudioEngine.h  FFTProcessor.h
include/palette/: BioluminescentPalette.h  CyberpunkPalette.h  IPalette.h  MonochromePalette.h  OrganicPalette.h  PaletteRegistry.h
include/rhi/: BufferUtils.h  CommandPool.h  Pipeline.h  RenderPass.h  Swapchain.h  Sync.h  VulkanContext.h  VulkanDeps.h
include/ui/: ControlPanel.h  InputSelector.h  UILayer.h
include/visuals/: ChladniStyle.h  IVisualStyle.h  LissajousStyle.h  OnsetDetector.h  ParticleStyle.h  RippleStyle.h  VisualStyleRegistry.h  WaveInterferenceStyle.h
shaders/: chladni.frag  chladni.vert  lissajous.frag  lissajous.vert  particle.frag  particle.vert  particle_simulate.comp  ripple.frag  triangle.vert  wave_interference.frag  wave_interference.vert
src/: main.cpp
src/app/: App.cpp
src/audio/: AudioEngine.cpp  FFTProcessor.cpp
src/palette/: BioluminescentPalette.cpp  CyberpunkPalette.cpp  MonochromePalette.cpp  OrganicPalette.cpp  PaletteRegistry.cpp
src/rhi/: BufferUtils.cpp  CommandPool.cpp  Pipeline.cpp  RenderPass.cpp  Swapchain.cpp  Sync.cpp  VulkanContext.cpp
src/ui/: ControlPanel.cpp  InputSelector.cpp  UILayer.cpp
src/visuals/: ChladniStyle.cpp  LissajousStyle.cpp  OnsetDetector.cpp  ParticleStyle.cpp  RippleStyle.cpp  VisualStyleRegistry.cpp  WaveInterferenceStyle.cpp
